--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -12,9 +12,9 @@
 // SHADOWS:
 
 @mixin textShadow {
-    text-shadow: 0 1rem 2rem rgba($color-black, .5);
+    text-shadow: 0 .5rem 2rem rgba($color-black, .5);
 }
 
 @mixin boxShadow {
-    box-shadow: 0 1rem 2rem rgba($color-black, .5);
+    box-shadow: 0 .5rem 3rem rgba($color-black, .5);
 }
