--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,8 +1,29 @@
 .btn {
-
-
+    display: inline-block;
+    padding: 2rem 4rem;
+    border-radius: .5rem;
+    // background-color: $color-secondary;
+    // color: $color-white;
+    font-size: $global-font-size;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: .5rem;
+    cursor: pointer;
+    border: 1px solid $color-black;
+    // @include boxShadow;
+    
+    
+    &:hover{
+        
+    }
+    
+    &:active {
+        
+    }
+    
     &--submit {
-
+        
+        margin-right: 5rem;
 
         &:hover{
 
@@ -17,7 +38,10 @@
         &,
         &:link,
         &:visited {
-
+            display: inline-block;
+            text-transform: uppercase;
+            text-decoration: none;
+            color: $color-black;
         }
 
         &:hover {
