--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -6,19 +6,26 @@
     // color: $color-white;
     font-size: $global-font-size;
     text-transform: uppercase;
-    font-weight: 500;
+    // font-weight: 500;
     letter-spacing: .5rem;
     cursor: pointer;
-    border: 1px solid $color-black;
-    // @include boxShadow;
+    border: 2px solid $color-black;
+    font-family: 'Lora', serif;
+    outline: none;
+    transition: all .3s;
+    @include boxShadow;
     
-    
-    &:hover{
-        
+    &:hover {
+        transform: translateY(-1rem);
+        box-shadow: 0 1rem 3rem rgba($color-black, .5);
+        background-color: $color-secondary-light;
+        // color: $color-white;
     }
     
     &:active {
-        
+        transform: translateY(-.5rem);
+        box-shadow: 0 .5rem 3rem rgba($color-black, .5);
+
     }
     
     &--submit {
@@ -42,12 +49,15 @@
             text-transform: uppercase;
             text-decoration: none;
             color: $color-black;
+            font-family: 'Lora', serif;
+            transition: all .3s;
+            @include boxShadow;
+            
         }
 
         &:hover {
-
         }
-
+        
         &:active {
 
         }
