--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,16 +8,16 @@ html {
     // defines what 1rem should be
     font-size: 62.5%; // 1 rem = 10px defined by me at the beginning
 
-    // @include respond(tab-land) {
-    //     font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25 
-    // }
-    // @include respond(tab-port) {
-    //     font-size: 50%; // 1rem = 8px, 8/16 = 50
-    // }
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25 
+    }
+    @include respond(tab-port) {
+        font-size: 50%; // 1rem = 8px, 8/16 = 50
+    }
 
-    // @include respond(big-desk) {
-    //     font-size: 75%; // 1rem = 12px, 12/16 = 75
-    // }
+    @include respond(big-desk) {
+        font-size: 75%; // 1rem = 12px, 12/16 = 75
+    }
 
     // -webkit-scroll-behavior: smooth;
     // scroll-behavior: smooth;
