--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -17,13 +17,24 @@ h3 {
         &--h1 {
             font-size: 7rem;
             text-transform: uppercase;
-            letter-spacing: 2rem;
+            letter-spacing: 3rem;
             font-weight: 900;
             color: $color-white;
-        }
 
-        &--h2 {
+            @include respond(tab-port) {
+                font-size: 5rem;
+                letter-spacing: 2rem;
+            }
 
+            @include respond(phone) {
+                font-size: 4rem;
+                letter-spacing: 1rem;
+            }
+
+            @include respond(phone-vs) {
+                font-size: 3.5rem;
+                letter-spacing: .5rem;
+            }
         }
     }
 
@@ -33,7 +44,16 @@ h3 {
         &--h3 {
             font-weight: 600;
             text-transform: capitalize;
-            // @include textShadow;
+            letter-spacing: .15rem;
+
+            @include respond(tab-port) {
+                line-height: 1.5;
+            }
+
+            @include respond(phone) {
+                letter-spacing: 0;
+                
+            }
         }
 
         &--input {
@@ -59,6 +79,11 @@ h3 {
                 letter-spacing: .1rem;
                 text-transform: capitalize;
                 text-decoration: none;
+
+                @include respond(phone) {
+                    letter-spacing: 0;
+                        
+                }
             }
 
             &:hover {
@@ -71,11 +96,6 @@ h3 {
 
 .footer {
 
-
-    &__text {
-
-    }
-
     &__link {
         &,
         &:link,
@@ -85,10 +105,6 @@ h3 {
             letter-spacing: .1rem;
             text-transform: uppercase;
             text-decoration: none;
-        }
-
-        &:hover {
-
         }
 
     }
