--- a/src/sass/layout/_home.scss
+++ b/src/sass/layout/_home.scss
@@ -10,6 +10,10 @@
         padding: 3rem 2rem;
         margin-bottom: 5rem;
 
+        @include respond(phone) {
+            padding: 3rem .5rem;
+        }
+
         &--h3 {
             padding: 2rem;
             margin: 2rem auto;
@@ -22,7 +26,11 @@
             border-radius: 3px;
             border: 2px solid $color-black;
             outline: none;
-            transition: all .2s;
+            transition: all .3s;
+
+            @include respond(phone) {
+                width: 90%;
+            }
             
             &:hover {
                 background-color: rgba($color-secondary-light, .5);
@@ -40,6 +48,10 @@
 
         &--btns-container {
             padding: 3rem;
+
+            @include respond(phone) {
+                padding: 3rem 0;
+            }
         }
 
 
@@ -47,15 +59,21 @@
 
     &__second {
         padding: 1rem 5rem;
+
+        @include respond(phone) {
+            padding: 1rem .5rem;
+        }
         
         &--result-container {
             padding: 0 2rem 5rem 2rem;
             border-left: 5px solid transparent;
             transition: all .5s;
+            margin-bottom: 5rem;  
             
-            &:not(:last-child) {
-                margin-bottom: 5rem;   
+            @include respond(phone) {
+                padding: 0 .5rem 5rem .5rem;
             }
+            
             
             &:hover {
                 border-left: 5px solid $color-primary;
@@ -68,6 +86,10 @@
             border: .15rem solid $color-primary;
             margin: 0 auto;
             @include boxShadow;
+
+            @include respond(phone) {
+                width: 60%;
+            }
         }
         
         &--h2 {
@@ -80,6 +102,8 @@
             display: block;
             padding: 2rem;
             text-align: left;
+            
+
         }
 
         &--link {
@@ -104,11 +128,23 @@
     padding: 5rem 10rem;
     background-color: $color-secondary-light;
 
+    @include respond(phone) {
+        padding: 5rem;
+    }
+
+    @include respond(phone-vs) {
+        padding: 5rem .5rem;
+    }
+
     &__hr {
         width: 40%;
         margin: 0 auto;
         border: 1.5px solid $color-primary;
         @include boxShadow;
+
+        @include respond(phone) {
+            width: 60%;
+        }
     }
 
     &__text {
